Source/WebCore/dom/Document.cpp
@@ -799,7 +799,7 @@ void Document::setCompatibilityMode(CompatibilityMode mode)
     if (inQuirksMode() != wasInQuirksMode) {
         // All user stylesheets have to reparse using the different mode.
         m_styleSheetCollection->clearPageUserSheet();
-        m_styleSheetCollection->clearPageGroupUserSheets();
+        m_styleSheetCollection->invalidateInjectedStyleSheetCache();
     }
 }
 
