Source/WebCore/dom/DocumentStyleSheetCollection.h
@@ -55,16 +55,17 @@ public:
     const Vector<RefPtr<CSSStyleSheet> >& activeAuthorStyleSheets() const { return m_activeAuthorStyleSheets; }
 
     CSSStyleSheet* pageUserSheet();
-    const Vector<RefPtr<CSSStyleSheet> >* pageGroupUserSheets() const;
-    const Vector<RefPtr<CSSStyleSheet> >* documentUserSheets() const { return m_userSheets.get(); }
+    const Vector<RefPtr<CSSStyleSheet> >& documentUserStyleSheets() const { return m_userStyleSheets; }
+    const Vector<RefPtr<CSSStyleSheet> >& injectedUserStyleSheets() const;
+    const Vector<RefPtr<CSSStyleSheet> >& injectedAuthorStyleSheets() const;
 
     void addStyleSheetCandidateNode(Node*, bool createdByParser);
     void removeStyleSheetCandidateNode(Node*);
 
     void clearPageUserSheet();
     void updatePageUserSheet();
-    void clearPageGroupUserSheets();
-    void updatePageGroupUserSheets();
+    void invalidateInjectedStyleSheetCache();
+    void updateInjectedStyleSheetCache() const;
 
     void addUserSheet(PassRefPtr<StyleSheetContents> userSheet);
 
@@ -125,9 +126,12 @@ private:
     int m_pendingStylesheets;
 
     RefPtr<CSSStyleSheet> m_pageUserSheet;
-    mutable OwnPtr<Vector<RefPtr<CSSStyleSheet> > > m_pageGroupUserSheets;
-    OwnPtr<Vector<RefPtr<CSSStyleSheet> > > m_userSheets;
-    mutable bool m_pageGroupUserSheetCacheValid;
+
+    mutable Vector<RefPtr<CSSStyleSheet> > m_injectedUserStyleSheets;
+    mutable Vector<RefPtr<CSSStyleSheet> > m_injectedAuthorStyleSheets;
+    mutable bool m_injectedStyleSheetCacheValid;
+
+    Vector<RefPtr<CSSStyleSheet> > m_userStyleSheets;
 
     bool m_hadActiveLoadingStylesheet;
     bool m_needsUpdateActiveStylesheetsOnStyleRecalc;
